reframing chapter part one

--- a/_posts/thesis_chapters/2025-3-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-3-6-Gdps.md
@@ -65,6 +65,17 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
 
 # The Use of Gameplay Design Patterns "It’s like a project in itself, really"
 
+## Research Questions March 2025
+
+**Principle question:** How can pedagogies to support CGD&P be enriched using socio-cultural approaches (CHAT more specifically)?
+
+
+1. What contradictions arose in participation in this research’s CGD&P processes and how were they addressed?
+
+2. How can the use of a collection of game design patterns support CGD&P, in particular in relation to abstract and concrete dimensions of existing pedagogies?
+
+3. How can varied dimensions of agency be identified and nurtured in an evolving community of game makers? (and thus what subsequent implications does this have on understandings of pedagogy design)
+
 ## Research Questions - March 2024
 
 1. What pedagogical tools and processes are available to support novices to overcome barriers to participation in game coding processes?
@@ -660,6 +671,24 @@ This discussion section discusses the complexity of the exanded object of activi
 <!-- the role of playtesting and including warm-up games and session reflections -->
 
 <!-- are explored in relation to the development of agency in the following chapter. -->
+
+### Discussion on emerging cultural practices / idioculture
+
+#### Playful idioculture
+
+Examples?
+
+#### Game maker types
+
+As explored in Chapter 6. the emergence of styles as something that I reflected back to participants to validte.
+
+
+The evidence of game maker types is in appendix x.
+
+
+
+
+
 ### Addressing the use of GDPs in relation to theoretical understandings of processes of mediation (and incorporation in repertoires of practice)
 
 NOT SURE OF Repertoires YET .
@@ -731,33 +760,45 @@ In Chapter 2 the value of a learning design using computational thinking pattern
 Chapter 2 also explored concepts of fluency in varied forms within constructionist research, technological, digital and computation.
 By way of contrast, the guiding principle being self expression and identity formation. However, given the limitations of constructionism as a theoretical framework, this research also reflects these limits.
 
-The limitations here are on detail on how to enact identity formation via specific pedagogical strategies. While CHapter 2. explored the value of pair and peer programming, it also highlighted a gap in the research in terms of x.
+The limitations here are on detail on how to enact identity formation via specific pedagogical strategies. While Chapter 2. explored the value of pair and peer programming, it also highlighted this area as one needed further development.
 
-SO?
+As a step towards this development we can identify the characteristics of fluency in the mediational uses of GDPs outlined in this chapter, identifying techniques used to design for those characteristics, and to surface additional socio-cultural concepts useful for an enriched understanding of processes as play.  
+
+**Identifying characteristics of fluency**
+
+The following summary is offered as an immediate analysis using the frame of computational fluency to ground further exploration in Chapter 7. In summative terms fluency can be seen in the mediational strategies outlined in this chapter in the following ways.
+
+Perhaps via a table.
+
+- via instrumental coding competency needed to make changes effectively with or without supporting documentation
+- from a as a read / write perspective, learners should be able to write as well as read programs as a form of empowerment [@resnick2002rethinking]
+- via expression of creative or significant ideas in constructing digital products   
+- as a means of identity formation in groups and collectives [@gee_chapter_2000]
+- Via  more general (non-coding) participation in communities, i.e. well informed feedback  on other projects.  
 
 
-CHALLNGE HERE HOW TO EXPLORE IN PART HERE USEFULLY AND MAKE ABRIDGE TO THE NEXT SECTION.
+<!-- NOTE CHALLENGE HERE HOW TO EXPLORE IN PART HERE USEFULLY AND MAKE ABRIDGE TO THE NEXT SECTION. -->
 
 <!-- NOTE - IS THIS IN THE NEXT CHAPTER? is this just in relation to GDPs? -->
-**Designing for fluency**
+**Discussion on designing for fluency**
+
+NOTE THIS SHOULD BE LIMITED AS EXPLORED LATER TOO. FLUENCY NOT AGENCY / MAKE A DISTINCTION/ - OR PERHAPS REMOVE.
 
 The work of the constructionist school is rich in a legacy of designing for fluency, notably including: software microworlds, affordance rich tools sets facilitating open-ended experimentations, accessible multi-media authoring software and community of Scratch. One idea which while present in part in online community of Scratch is that of constructopedia, an evolving resource of inspirational design elements, and accompanying instructions.
+
 
 The collection of GDPs with linked documentation fulfils this role.    
 
 To extend the concepts of designing for fluidity, it is of value to explore the characteristics of the emerging design practices and potential strategies to support them. These include: a flexible approach to design stages, varied forms of incorporation of external repertoires, and a tension between choice of participant pathway and creative restrictions in the learning design.
 
-LINK TO NEXT CHAPTER.
+
+
 
 <!-- This section synthesises my observations on video data and my own journal reflections on this topic of designing for flow. Flow is a highly subjective experience, and as such, there is a danger that I privilege my own interests in this analysis, and a tendency that I reflect on in the concluding chapter. -->
 
 
 <!-- REMOVE OR MOVE TO LR IF NEEDED.
 Given the disparate nature of the features of designed and emerging pedagogy, it is of value to address ways of conceptualise the overall learning process. While the chaotic directions possible in design evoke a rhizomatic approach to learning [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic], I concur with Biffi et al [ @biffi_chasing_2017-1, p. 972] who identify significant competencies required which are not well-aligned with the age group of this context.  -->
-
-
-
-
 
 
 <!-- A DESIGN FOR MENTALISTS BY A MENTALIST -->
@@ -867,11 +908,13 @@ The observations of this chapter show the diversity and flexibility of uses of G
 The next chapter builds on this to propose the potential of GDPs as a relatable navigational framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers.
 
 
-The findings identified a complex object with a diversity of motivation which pose challenges in communciting in simple terms in terms of what characteristics we are desiging learning environments to devolop. The candidates of proximal flow and computational fluency were explored in relation to existing research and gaps were identified in there coverage of the importance of learning agency and identify formation.
+The findings identified a complex object with a diversity of motivation which pose challenges in communicating in simple terms in terms of what characteristics we are designing learning environments to develop. The candidates of proximal flow and computational fluency were explored in relation to existing research and gaps were identified in there coverage of the importance of learning agency and identify formation.
 
-As such in the next chapter, this gap is addressed via the socio-cultural framing of learning. This is done in several ways?
+As such in the next chapter, this gap is addressed via the socio-cultural framing of learning.
 
--  as participation which can involved into repertoires of practice [@lecusay_telementoring_2015; @gutierrez_learning_2019-1].
+<!-- This is done in several ways?
+
+-  as participation which can involved into repertoires of practice [@lecusay_telementoring_2015; @gutierrez_learning_2019-1]. -->
 
 
 
