--- a/_posts/thesis_chapters/2025-3-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-3-6-Gdps.md
@@ -729,6 +729,29 @@ Given the complexity of the object being worked on in this research, in particul
 One candidate to extend is the varied concepts of fluency in the field.
 
 
+
+#### Community concepts and norming behaviour emerging during playtesting - MOVED HERE INTEGRATE UP - LINK WITH DIAGRAMS AS RULES / NORMS AND EMERGENCE OF EXPANDED OBJECTS 
+
+MOVE BACK TO CHAPTER 6 IF SPACE?
+
+NOTE THERE IS SOMETHING HERE ABOUT ME STEPPING BACK AND LETTING THE COMMUNITY EVOLVE.
+
+Ed gives a more technical explanation from  involving the naming of the variable _jump speed_.
+
+Other children come and play the game but only for less than a minute before leaving. Towards the end of the playtesting process, as one child leaves, Molly comments "It's so frustrating." This suggests an evolving understanding that her game is frustrating to players rather than pleasantly challenging.
+
+The indirect norming behaviours described in appendix 5.Norm.x mirror observations seen in the work of Rogoff and colleagues [@rogoff_cultural_2003] on learning in  community settings.
+
+There is an apparent tension in play here between encouraging individual agency of expression within the game and an evolving community tendency to norm peoples games to be more _playable_, specifically that player movement should conforming to wider expectations.
+
+What we can draw from the data at this stage is that playtesing provides many leverage points to facilitating learner agency and discuss the limits of designs. IN addition, playtesting is a process that allows participants to demonstrate informed criticality as a player and guide the creations of peers via gameplay feedback.
+
+This process is an example of an emerging process where cultural concepts are mutually constituted by all actors involved in the game making activity system. While the concepts of hardness and challenge that emerge and not concrete examples of GDPS, they are the results of changed GDPs. The next chapter explores similar data on the use of GDP related concepts by participants and the resultant potential impact on participant agency.
+
+**A tension in use of norming practices and participant choice?**
+However, as a seeming counterpoint to this growing agency is the norming effects of concepts that gain community currency in playtesting. The repeated attempts by participants to make the jumping mechanic of Molly less frustrating can be seen as a potential drag on the agency or autonomy of Molly as a designer. However this may be a false dichotomy. Such norming practices can be seen from a different perspective according to Rogoff, as a productive nudge to get real.
+ IS THIS EXPLORED IN THE NEXT CHAPTER?
+
 <!-- In line with Sannino [@sannino_transformative_2022], this study frames such innovation within CHAT as transformational agency, a discussion of which forms a significant part of the following chapter. -->
 
 
