--- a/_posts/thesis_chapters/tocs/2025-3-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-3-6-Gdps.md_toc.md
@@ -1,5 +1,6 @@
 -   [The Use of Gameplay Design Patterns "It's like a project in itself,
     really"](#the-use-of-gameplay-design-patterns-its-like-a-project-in-itself-really)
+    -   [Research Questions March 2025](#research-questions-march-2025)
     -   [Research Questions - March
         2024](#research-questions---march-2024)
     -   [Introduction](#introduction)
@@ -17,6 +18,9 @@
             processes](#gdps-used-to-scaffold-ideation-and-prioritisation-processes)
         -   [GDPs aiding the process of division of labour
             (1400)](#gdps-aiding-the-process-of-division-of-labour-1400)
+        -   [Discussion of GP- Flexible Navigation/ not aligning with
+            design
+            cycles](#discussion-of-gp--flexible-navigation-not-aligning-with-design-cycles)
     -   [Use of GDPs in the cultural plane / community level of
         activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
         -   [The role of GDPs to facilitate learners to design for
@@ -26,12 +30,17 @@
         -   [Evolution and propagation of GDPs concepts during
             playtesting](#evolution-and-propagation-of-gdps-concepts-during-playtesting)
     -   [Discussion](#discussion)
+        -   [Discussion on emerging cultural practices /
+            idioculture](#discussion-on-emerging-cultural-practices-idioculture)
+            -   [Playful idioculture](#playful-idioculture)
+            -   [Game maker types](#game-maker-types)
         -   [Addressing the use of GDPs in relation to theoretical
-            understandings of processes of mediation and incorporation
+            understandings of processes of mediation (and incorporation
             in repertoires of
-            practice](#addressing-the-use-of-gdps-in-relation-to-theoretical-understandings-of-processes-of-mediation-and-incorporation-in-repertoires-of-practice)
-        -   [Observations on emerging design
-            practices](#observations-on-emerging-design-practices)
+            practice)](#addressing-the-use-of-gdps-in-relation-to-theoretical-understandings-of-processes-of-mediation-and-incorporation-in-repertoires-of-practice)
+        -   [Observations on emerging (design practices) - REFRAME AS
+            FLUENCY
+            ACTIVITY?](#observations-on-emerging-design-practices---reframe-as-fluency-activity)
     -   [Conclusion](#conclusion)
     -   [MOVED FROM INTRODUCTION](#moved-from-introduction)
         -   [MOVED FROM GUIDED
