intermediate level something

--- a/_posts/thesis_chapters/tocs/2025-3-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-3-6-Gdps.md_toc.md
@@ -38,6 +38,10 @@
             understandings of processes of mediation (and incorporation
             in repertoires of
             practice)](#addressing-the-use-of-gdps-in-relation-to-theoretical-understandings-of-processes-of-mediation-and-incorporation-in-repertoires-of-practice)
+            -   [Community concepts and norming behaviour emerging
+                during playtesting - MOVED HERE INTEGRATE UP - LINK WITH
+                DIAGRAMS AS RULES / NORMS AND EMERGENCE OF EXPANDED
+                OBJECTS](#community-concepts-and-norming-behaviour-emerging-during-playtesting---moved-here-integrate-up---link-with-diagrams-as-rules-norms-and-emergence-of-expanded-objects)
         -   [Observations on emerging (design practices) - REFRAME AS
             FLUENCY
             ACTIVITY?](#observations-on-emerging-design-practices---reframe-as-fluency-activity)
