--- a/_posts/thesis_chapters/2025-3-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-3-6-Gdps.md
@@ -668,32 +668,12 @@ Thus, similar to the way tools were modified to provide new affordances for part
 
 This discussion section discusses the complexity of the exanded object of activity and the diverse mediational uses of GDPs using a 3GAT framework. Bearing in mind the challenge of communicating the diverse motivations and forms of activity involved, it returns to concepts of proximal flow and computational fluency present in CGD&P research to begin an analysis of how this research can contribute to understandings in this domain.
 
-<!-- the role of playtesting and including warm-up games and session reflections -->
-
-<!-- are explored in relation to the development of agency in the following chapter. -->
-
-### Discussion on emerging cultural practices / idioculture
-
-#### Playful idioculture
-
-Examples?
-
-#### Game maker types
-
-As explored in Chapter 6. the emergence of styles as something that I reflected back to participants to validte.
 
 
-The evidence of game maker types is in appendix x.
+### Addressing the use of GDPs in relation to theoretical understandings of processes of mediation and expanded objects of activity
 
 
-
-
-
-### Addressing the use of GDPs in relation to theoretical understandings of processes of mediation (and incorporation in repertoires of practice)
-
-NOT SURE OF Repertoires YET .
-
-This section begins an interpretation of the diverse roles of GDPs in the game-making activity using CHAT concepts, with this analysis continuing in the following chapter. Addressing GDPs as a mediational tool, Chapter 5 outlined design decisions, and this chapter explores the impact using data from video recordings.
+This section begins an interpretation of the diverse roles of GDPs in the game-making activity using CHAT concepts, with this analysis continuing in the following chapter.
 
 The uses of the quick-start activities, tutorials, and code snippets as supporting tools, if viewed in isolation, can be seen as a more straightforward, triangular form of subject, tool, and object mediation (see Chapter 4 diagram). This chapter, along with the evolution of the learning design, exposed tensions where existing mediational strategies or tools were insufficient, and thus innovative forms of mediation were needed. Elements of the innovation in the toolset of learning design, based on the emerging needs of the participants explored in this and the previous chapter, exemplify the development of new mediational strategies and tools, a discussion of which forms a significant part of the following chapter.
 
@@ -709,10 +689,10 @@ The examples in this chapter show the importance of GDPs as a lingua franca, as 
 
 ![Illustration 6.x - Diverse mediational strategies and complex object of activity  ](./Pictures/ch_6_at_dia_1.png){width=95%}
 
+Illustration 6.x - Diverse mediational strategies and complex object of activity
 
-
+MOVE NEXT CHAPTER
 For many younger participants, playful interactions can be seen a a leading activity, or a primary motivation.
-
 The process of playtesting often served as a facilitative medium for a shared language and idioculture to emerge and, as such, became a significant part of the pedagogy of the learning design.
 
 The playful elements of the revised process with greater playtesting time helped remove system tensions and moreover introduced system congruencies.
